kubeflow-azimuth/kubeflow-azimuth-chart/templates/cluster-local-gateway-544.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    managed-by: kubeflow-azimuth-app
    release: istio
  name: cluster-local-gateway
  namespace: istio-system
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
